后端的四个训练和个人中心，登录注册API基本完成，先学习中间件以及做JWT身份验证
